--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^10.1",
+        "pestphp/pest": "^3.3",
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "pestphp/pest-plugin-livewire": "^3.0",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
