--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,7 @@
     "require": {
         "php": "^8.1",
         "blade-ui-kit/blade-ui-kit": "^0.6.2",
-        "filament/filament": "^4.0",
-        "filament/actions": "^4.0",
-        "filament/forms": "^4.0",  
-        "filament/infolists": "^4.0",
-        "filament/tables": "^4.0", 
-        "filament/notifications": "^4.0",
-        "filament/widgets": "^4.0",
+        "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
@@ -25,7 +19,6 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "filament/upgrade": "^4.0",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
@@ -77,6 +70,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "beta",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
